Use SVG animation.

--- a/appengine/contents/index.html
+++ b/appengine/contents/index.html
@@ -18,7 +18,25 @@
       </form>
     </p>
     <p>
-      <img src="/cloud_masks/{{date.year}}/{{date.month}}/{{date.day}}/animated.gif">
+{% set blobs = site_manager.list_blobs(count=24) %}
+{% set count = blobs|length %}
+<svg width="1024px" height="1074px">
+  <style>
+.heavy { font: normal 30px sans-serif; }
+@keyframes points {
+0% { opacity: 1; }
+{{100 / count}}% { opacity: 0; }
+100% { opacity: 1; }
+}
+{% for i, _, _ in blobs %}
+.Frame{{i}} { animation: points {{count}}s {{i}}s infinite normal step-end forwards; }
+{% endfor %}
+</style>
+{% for i, t, src in blobs %}
+<text class="heavy Frame{{i}}" x=10 y=30>{{ t.strftime('%Y/%m/%d %H:%M:%S') }}</text>
+<image class="Frame{{i}}" xlink:href="{{ src }}" x=0 y=36 width="1024px" height="1024px"/>
+{% endfor %}
+</svg>
     </p>
   </body>
 </html>
